make website mobile friendly

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <header>
     <title>This is title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
@@ -12,6 +13,23 @@
     <script language="javascript" type="text/javascript" src="js/scrollBGDemo.js"></script>
   </header>
   <body>
+    <div class="header">
+      <div id="nav-icon2">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+    <div class="menu">
+      <ul>
+        <a href="#"><li>ABOUT</li></a>
+        <a href="#"><li>FAQ</li></a>
+        <a href="#"><li>REGISTER</li></a>
+      </ul>
+    </div>
     <div id="canvas-holder"></div>
     <div id="content-wrapper">
       <img id="logo" src="img/bitcamp-logo-badge.png"/>
