Add CONDUCT and COLORWAR

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <header>
-    <title>This is title</title>
+    <title>bitcamp 2017</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
@@ -25,9 +25,11 @@
     </div>
     <div class="menu">
       <ul>
-        <a href="#"><li>ABOUT</li></a>
+        <a href="#"><li>VENUE</li></a>
         <a href="#"><li>FAQ</li></a>
         <a href="#"><li>REGISTER</li></a>
+        <a href="#"><li>COLORWAR</li></a>
+        <a href="#"><li>CONDUCT</li></a>
       </ul>
     </div>
     <div id="canvas-holder"></div>
