--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
       <img id="logo" src="img/bitcamp-logo-badge.png"/>
       <!-- <h1>bitcamp</h1> -->
       <div id="nav-bar-wrapper">
-        <a class="button" href="">ABOUT</a>
         <a class="button" href="">FAQ</a>
         <a class="button" href="">REGISTER</a>
+        <a class="button" href="">COLORWAR</a>
+        <a class="button" href="">CONDUCT</a>
+        <a class="button" href="">CONTACT</a>
       </div>
       <div id="opaque-wrapper">
         <p class="intro-text">Bitcamp is a place for exploration.
@@ -142,6 +144,20 @@
       <img class="content-images" src="img/fillerImage2.jpg"/>
       <div id="opaque-wrapper">
         <h2 class="heading"> Sponsors </h2>
+        <img class="recruiter-images" src="img/CapitalOne.svg"/>
+        <img class="recruiter-images" src="img/Leidos.svg"/>
+        <img class="recruiter-images" src="img/Facebook.svg"/>
+        <img class="api-images" src="img/Cipher.svg"/>
+        <img class="api-images" src="img/OPIS.svg"/>
+        <img class="api-images" src="img/Lockheed-martin-logo.png"/>
+        <img class="api-images" src="img/aie.svg"/>
+        <img class="api-images" src="img/BSOS_Logo.jpg"/>
+        <img class="api-images" src="img/Appian.png"/>
+        <img class="api-images" src="img/Praxis-logo.png"/>
+        <img class="starter-images" src="img/math.png"/>
+        <img class="starter-images" src="img/Asymmetrik_logo.png"/>
+        <img class="starter-images" src="img/PayPal.png"/>
+        <img class="starter-images" src="img/Namecheap2.svg"/>
       </div>
     </div>
   </body>
