--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <link rel = "stylesheet" type = "text/css" href = "css/style.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script language="javascript" type="text/javascript" src="js/p5.js"></script>
     <script language="javascript" type="text/javascript" src="js/p5.dom.js"></script>
     <script language="javascript" type="text/javascript" src="js/scrollBGDemo.js"></script>
@@ -25,11 +26,11 @@
     </div>
     <div class="menu">
       <ul>
-        <a href="#"><li>VENUE</li></a>
-        <a href="#"><li>FAQ</li></a>
-        <a href="#"><li>REGISTER</li></a>
+        <a href="#faq"><li>FAQ</li></a>
+        <a href="pages/register.html"><li>REGISTER</li></a>
         <a href="#"><li>COLORWAR</li></a>
-        <a href="#"><li>CONDUCT</li></a>
+        <a href="#sponsors"><li>SPONSORS</li></a>
+        <a href="#contact"><li>CONTACT</li></a>
       </ul>
     </div>
     <div id="canvas-holder"></div>
@@ -37,13 +38,13 @@
       <img id="logo" src="img/bitcamp-logo-badge.png"/>
       <!-- <h1>bitcamp</h1> -->
       <div id="nav-bar-wrapper">
-        <a class="button" href="">FAQ</a>
-        <a class="button" href="">REGISTER</a>
+        <a class="button" href="#faq">FAQ</a>
+        <a class="button" href="register.html">REGISTER</a>
         <a class="button" href="">COLORWAR</a>
-        <a class="button" href="">CONDUCT</a>
-        <a class="button" href="">CONTACT</a>
+        <a class="button" href="#sponsors">SPONSORS</a>
+        <a class="button" href="#contact">CONTACT</a>
       </div>
-      <div id="opaque-wrapper">
+      <div class="opaque-wrapper">
         <p class="intro-text">Bitcamp is a place for exploration.
           You will have 36 hours to delve into your curiosities,
           learn something new, and make something awesome.With world-class
@@ -55,7 +56,7 @@
         </form>
       </div>
       <img class="content-images" src="img/fillerImage1.jpg"/>
-      <div id="opaque-wrapper">
+      <div id="faq" class="opaque-wrapper">
         <h2 class="heading"> FAQ </h2>
         <div class="fifty-percent">
           <h3 class="heading"> What's Bitcamp? </h3>
@@ -76,10 +77,10 @@
           </p>
           <h3 class="heading"> Where's Bitcamp? </h3>
           <p class="body-text">
-            Bitcamp 2016 will take place at the Xfinity center on the
+            Bitcamp 2017 will take place at the Xfinity center on the
             University of Maryland Campus
 
-            Directions
+            <a href="http://www.umterps.com/ViewArticle.dbml?ATCLID=208131345">Directions</a>
           </p>
           <h3 class="heading"> Travel </h3>
           <p class="body-text">
@@ -100,10 +101,10 @@
         <div class="fifty-percent">
           <h3 class="heading"> Timing </h3>
           <p class="body-text">
-            People will arrive between 6pm and 8pm on Friday, April8, 2016. Dinner
+            People will arrive between 6pm and 8pm on Friday, April 7, 2017. Dinner
             is served at 6:30 PM. Our Sponsor Fair is at 8:00 PM, where you can
             spend time meeting and listening to sponsor talks. Hacking will start at
-            10PM on Friday and go until 10am on Sunday, April 10, 2016. Closing
+            10PM on Friday and go until 10am on Sunday, April 9, 2017. Closing
             session will end by 3pm on Sunday.
           </p>
           <h3 class="heading"> Packing List </h3>
@@ -142,7 +143,7 @@
         </div>
       </div>
       <img class="content-images" src="img/fillerImage2.jpg"/>
-      <div id="opaque-wrapper">
+      <div id="sponsors" class="opaque-wrapper">
         <h2 class="heading"> Sponsors </h2>
         <img class="recruiter-images" src="img/CapitalOne.svg"/>
         <img class="recruiter-images" src="img/Leidos.svg"/>
@@ -159,6 +160,8 @@
         <img class="starter-images" src="img/PayPal.png"/>
         <img class="starter-images" src="img/Namecheap2.svg"/>
       </div>
+    </div>
+    <div id="contact" class="opaque-wrapper">
     </div>
   </body>
   <script>
