Add contact, copyright, and social media footer.

--- a/index.html
+++ b/index.html
@@ -160,9 +160,20 @@
         <img class="starter-images" src="img/PayPal.png"/>
         <img class="starter-images" src="img/Namecheap2.svg"/>
       </div>
+      <div id="contact" class="opaque-wrapper">
+        <h3 class="contact">Feel free to <a href = "#">email</a> or tweet us <a href = "#">@bitcmp<a><p>
+      </div>
+      <div id="copyright" class="opaque-wrapper">
+        <p class="copyright">© 2017 Bitcamp<p>
+      </div>
+      <div id="social-media" class="opaque-wrapper">
+        <a href="#"><img class="social-media-images" src="img/fb_icon.svg" /></a>
+        <a href="#"><img class="social-media-images" src="img/twitter_icon.svg" /></a>
+        <a href="#"><img class="social-media-images" src="img/instagram_icon.svg" /></a>
+        <a href="#"><img class="social-media-images" src="img/snapchat_icon.svg" /></a>
+      </div>
     </div>
-    <div id="contact" class="opaque-wrapper">
-    </div>
+
   </body>
   <script>
   // window.onscroll = function() {
