Add conduct page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div id="nav-bar-wrapper">
         <a class="button" href="#faq">FAQ</a>
         <a class="button" href="register.html">REGISTER</a>
-        <a class="button" href="">COLORWAR</a>
+        <a class="button" href="#">COLORWAR</a>
         <a class="button" href="#sponsors">SPONSORS</a>
         <a class="button" href="#contact">CONTACT</a>
       </div>
@@ -50,12 +50,12 @@
           learn something new, and make something awesome.With world-class
           mentors and hundreds of fellow campers, you're in for an amazing
            time. If you're ready for an adventure, see you by the fire!</p>
-        <form>
+        <form action="//bitca.us14.list-manage.com/subscribe/post?u=8d420d7289f5918838f6ce9e8&amp;id=8d4989f015" method="post" target="_blank" novalidate>
           <input type="text" id="input-email" placeholder="example@email.com"/>
           <input type="submit" class="button" value="GET UPDATES"/>
         </form>
       </div>
-      <img class="content-images" src="img/fillerImage1.jpg"/>
+      <img class="content-images" src="img/banner-1.jpg"/>
       <div id="faq" class="opaque-wrapper">
         <h2 class="heading"> FAQ </h2>
         <div class="fifty-percent">
@@ -78,15 +78,14 @@
           <h3 class="heading"> Where's Bitcamp? </h3>
           <p class="body-text">
             Bitcamp 2017 will take place at the Xfinity center on the
-            University of Maryland Campus
-
-            <a href="http://www.umterps.com/ViewArticle.dbml?ATCLID=208131345">Directions</a>
+            University of Maryland Campus! 
+            <a href="http://www.umterps.com/ViewArticle.dbml?ATCLID=208131345">Click here for directions</a>
           </p>
           <h3 class="heading"> Travel </h3>
           <p class="body-text">
             We'll have buses covering travel from several schools and areas. We
             will not be reimbursing any individual travel expenses this year.
-            Please contact travel@bitca.mp for more information.
+            Please contact <a href="mailto:travel@bitca.mp">travel@bitca.mp</a> for more information.
           </p>
           <h3 class="heading"> Guidelines </h3>
           <p class="body-text">
@@ -95,7 +94,7 @@
             Please read our Code of Conduct. Organizers will enforce this
             code throughout the event. We are expecting cooperation from all
             participants to help ensure a safe environment for everybody (TL:DR
-            be nice).
+            be nice). <a href="conduct.html">Click here for our code of conduct</a>
           </p>
         </div>
         <div class="fifty-percent">
@@ -142,7 +141,7 @@
           </p>
         </div>
       </div>
-      <img class="content-images" src="img/fillerImage2.jpg"/>
+      <img class="content-images" src="img/IMG_6541.raw"/>
       <div id="sponsors" class="opaque-wrapper">
         <h2 class="heading"> Sponsors </h2>
         <img class="recruiter-images" src="img/CapitalOne.svg"/>
