Add links for social media

--- a/conduct.html
+++ b/conduct.html
@@ -46,6 +46,12 @@ Credit for this Code of Conduct goes to The Ada Initiative, with the original so
       </p>
     </div>
     <div id="contact" class="opaque-wrapper">
+      <h3 class="contact">Feel free to <a href="mailto:hello@bitca.mp">email</a> or tweet us <a href="https://twitter.com/bitcmp">@bitcmp<a><p>
+      <p class="copyright">© 2017 Bitcamp<p>
+      <a href="https://www.facebook.com/bitcmp"><img class="social-media-images" src="img/fb_icon.svg" /></a>
+      <a href="https://twitter.com/bitcmp"><img class="social-media-images" src="img/twitter_icon.svg" /></a>
+      <a href="https://instagram.com/bitcamp"><img class="social-media-images" src="img/instagram_icon.svg" /></a>
+      <a href="https://go.snapchat.com/add/bitcamp"><img class="social-media-images" src="img/snapchat_icon.svg" /></a>
     </div>
   </body>
   <script>
