--- a/conduct.html
+++ b/conduct.html
@@ -1,19 +1,37 @@
 <html>
-  <header>
+  <head>
     <title>bitcamp 2017</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="bitcamp">
+    <meta property="og:title" content="Bitcamp 2017">
+    <meta property="og:site_name" content="Bitcamp">
+    <meta property="og:url" content="http://bitca.mp/">
+    <meta property="og:description" content="Bitcamp is a place for exploration. You will have 36 hours to delve into your curiosities, learn something new, and make something awesome. With world-class mentors and hundreds of fellow campers, you’re in for an amazing time. If you’re ready for an adventure, see you by the fire!">
+    <meta property="og:image" content="http://bitca.mp/img/facebook-share-link.png" />
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:url" content="http://bitca.mp/">
+    <meta name="twitter:title" content="Bitcamp 2017">
+    <meta name="twitter:description" content="Bitcamp is a place for exploration. You will have 36 hours to delve into your curiosities, learn something new, and make something awesome. With world-class mentors and hundreds of fellow campers, you’re in for an amazing time. If you’re ready for an adventure, see you by the fire!">
+    <meta name="twitter:image" content="http://bitca.mp/img/twitter-share-link.png">
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <link rel = "stylesheet" type = "text/css" href = "css/style.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="/bitcamp-favicon.ico">
+    <script
+      src="https://code.jquery.com/jquery-3.1.1.min.js"
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+      crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <script language="javascript" type="text/javascript" src="js/p5.js"></script>
     <script language="javascript" type="text/javascript" src="js/p5.dom.js"></script>
     <script language="javascript" type="text/javascript" src="js/scrollBGDemo.js"></script>
-  </header>
+  </head>
   <body>
+    <a id="mlh-trust-badge" style="position:fixed;top:0;left:4em;max-width:7em;width:40%;min-width: 3em;display:block;z-index:10000" href="https://mlh.io/seasons/na-2017/events" target="_blank"><img src="img/banner.png" alt="MLH Official - Spring 2016" style="width:100%;" ></a>
     <div id="canvas-holder"></div>
     <div id="content-wrapper">
     <img id="logo" src="img/bitcamp-logo-badge.png"/>
