--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <html>
-  <header>
-    <title>This is title</title>
+  <head>
+    <title>bitcamp 2017</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="bitcamp">
+    <meta property="og:title" content="Bitcamp 2017">
+    <meta property="og:site_name" content="Bitcamp">
+    <meta property="og:url" content="http://bitca.mp/">
+    <meta property="og:description" content="Bitcamp is a place for exploration. You will have 36 hours to delve into your curiosities, learn something new, and make something awesome. With world-class mentors and hundreds of fellow campers, you’re in for an amazing time. If you’re ready for an adventure, see you by the fire!">
+    <meta property="og:image" content="http://bitca.mp/img/facebook-share-link.png" />
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:url" content="http://bitca.mp/">
+    <meta name="twitter:title" content="Bitcamp 2017">
+    <meta name="twitter:description" content="Bitcamp is a place for exploration. You will have 36 hours to delve into your curiosities, learn something new, and make something awesome. With world-class mentors and hundreds of fellow campers, you’re in for an amazing time. If you’re ready for an adventure, see you by the fire!">
+    <meta name="twitter:image" content="http://bitca.mp/img/twitter-share-link.png">
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <link rel = "stylesheet" type = "text/css" href = "css/style.css"/>
+    <link rel="shortcut icon" href="/bitcamp-favicon.ico">
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <script language="javascript" type="text/javascript" src="js/p5.js"></script>
     <script language="javascript" type="text/javascript" src="js/p5.dom.js"></script>
     <script language="javascript" type="text/javascript" src="js/scrollBGDemo.js"></script>
-  </header>
+  </head>
   <body>
+    <a id="mlh-trust-badge" style="position:fixed;top:0;left:4em;max-width:7em;width:40%;min-width: 3em;display:block;z-index:10000" href="https://mlh.io/seasons/na-2017/events" target="_blank"><img src="img/banner.png" alt="MLH Official - Spring 2016" style="width:100%;" ></a>
     <div class="header">
       <div id="nav-icon2">
         <span></span>
@@ -25,9 +39,11 @@
     </div>
     <div class="menu">
       <ul>
-        <a href="#"><li>ABOUT</li></a>
-        <a href="#"><li>FAQ</li></a>
-        <a href="#"><li>REGISTER</li></a>
+        <a href="#faq"><li>FAQ</li></a>
+        <a href="pages/register.html"><li>REGISTER</li></a>
+        <a href="#"><li>COLORWAR</li></a>
+        <a href="#sponsors"><li>SPONSORS</li></a>
+        <a href="#contact"><li>CONTACT</li></a>
       </ul>
     </div>
     <div id="canvas-holder"></div>
@@ -35,23 +51,25 @@
       <img id="logo" src="img/bitcamp-logo-badge.png"/>
       <!-- <h1>bitcamp</h1> -->
       <div id="nav-bar-wrapper">
-        <a class="button" href="">ABOUT</a>
-        <a class="button" href="">FAQ</a>
-        <a class="button" href="">REGISTER</a>
+        <a class="button" href="#faq">FAQ</a>
+        <a class="button" href="register.html">REGISTER</a>
+        <a class="button" href="#">COLORWAR</a>
+        <a class="button" href="#sponsors">SPONSORS</a>
+        <a class="button" href="#contact">CONTACT</a>
       </div>
-      <div id="opaque-wrapper">
+      <div class="opaque-wrapper">
         <p class="intro-text">Bitcamp is a place for exploration.
           You will have 36 hours to delve into your curiosities,
           learn something new, and make something awesome.With world-class
           mentors and hundreds of fellow campers, you're in for an amazing
            time. If you're ready for an adventure, see you by the fire!</p>
-        <form>
+        <form action="//bitca.us14.list-manage.com/subscribe/post?u=8d420d7289f5918838f6ce9e8&amp;id=8d4989f015" method="post" target="_blank" novalidate>
           <input type="text" id="input-email" placeholder="example@email.com"/>
           <input type="submit" class="button" value="GET UPDATES"/>
         </form>
       </div>
-      <img class="content-images" src="img/fillerImage1.jpg"/>
-      <div id="opaque-wrapper">
+      <img class="content-images" src="img/banner-1.jpg"/>
+      <div id="faq" class="opaque-wrapper">
         <h2 class="heading"> FAQ </h2>
         <div class="fifty-percent">
           <h3 class="heading"> What's Bitcamp? </h3>
@@ -72,16 +90,15 @@
           </p>
           <h3 class="heading"> Where's Bitcamp? </h3>
           <p class="body-text">
-            Bitcamp 2016 will take place at the Xfinity center on the
-            University of Maryland Campus
-
-            Directions
+            Bitcamp 2017 will take place at the Xfinity center on the
+            University of Maryland Campus! 
+            <a href="http://www.umterps.com/ViewArticle.dbml?ATCLID=208131345">Click here for directions</a>
           </p>
           <h3 class="heading"> Travel </h3>
           <p class="body-text">
             We'll have buses covering travel from several schools and areas. We
             will not be reimbursing any individual travel expenses this year.
-            Please contact travel@bitca.mp for more information.
+            Please contact <a href="mailto:travel@bitca.mp">travel@bitca.mp</a> for more information.
           </p>
           <h3 class="heading"> Guidelines </h3>
           <p class="body-text">
@@ -90,16 +107,16 @@
             Please read our Code of Conduct. Organizers will enforce this
             code throughout the event. We are expecting cooperation from all
             participants to help ensure a safe environment for everybody (TL:DR
-            be nice).
+            be nice). <a href="conduct.html">Click here for our code of conduct</a>
           </p>
         </div>
         <div class="fifty-percent">
           <h3 class="heading"> Timing </h3>
           <p class="body-text">
-            People will arrive between 6pm and 8pm on Friday, April8, 2016. Dinner
+            People will arrive between 6pm and 8pm on Friday, April 7, 2017. Dinner
             is served at 6:30 PM. Our Sponsor Fair is at 8:00 PM, where you can
             spend time meeting and listening to sponsor talks. Hacking will start at
-            10PM on Friday and go until 10am on Sunday, April 10, 2016. Closing
+            10PM on Friday and go until 10am on Sunday, April 9, 2017. Closing
             session will end by 3pm on Sunday.
           </p>
           <h3 class="heading"> Packing List </h3>
@@ -137,21 +154,39 @@
           </p>
         </div>
       </div>
-      <img class="content-images" src="img/fillerImage2.jpg"/>
-      <div id="opaque-wrapper">
+      <img class="content-images" src="img/IMG_6541.raw"/>
+      <div id="sponsors" class="opaque-wrapper">
         <h2 class="heading"> Sponsors </h2>
+        <img class="recruiter-images" src="img/CapitalOne.svg"/>
+        <img class="recruiter-images" src="img/Leidos.svg"/>
+        <img class="recruiter-images" src="img/Facebook.svg"/>
+        <img class="api-images" src="img/Cipher.svg"/>
+        <img class="api-images" src="img/OPIS.svg"/>
+        <img class="api-images" src="img/Lockheed-martin-logo.png"/>
+        <img class="api-images" src="img/aie.svg"/>
+        <img class="api-images" src="img/BSOS_Logo.jpg"/>
+        <img class="api-images" src="img/Appian.png"/>
+        <img class="api-images" src="img/Praxis-logo.png"/>
+        <img class="starter-images" src="img/math.png"/>
+        <img class="starter-images" src="img/Asymmetrik_logo.png"/>
+        <img class="starter-images" src="img/PayPal.png"/>
+        <img class="starter-images" src="img/Namecheap2.svg"/>
+      </div>
+      <div id="contact" class="opaque-wrapper">
+        <h3 class="contact">Feel free to <a href="mailto:hello@bitca.mp">email</a> or tweet us <a href="https://twitter.com/bitcmp">@bitcmp<a><p>
+      </div>
+      <div id="copyright" class="opaque-wrapper">
+        <p class="copyright">© 2017 Bitcamp<p>
+      </div>
+      <div id="social-media" class="opaque-wrapper">
+        <a href="https://www.facebook.com/bitcmp"><img class="social-media-images" src="img/fb_icon.svg" /></a>
+        <a href="https://twitter.com/bitcmp"><img class="social-media-images" src="img/twitter_icon.svg" /></a>
+        <a href="https://instagram.com/bitcamp"><img class="social-media-images" src="img/instagram_icon.svg" /></a>
+        <a href="https://go.snapchat.com/add/bitcamp"><img class="social-media-images" src="img/snapchat_icon.svg" /></a>
       </div>
     </div>
+
   </body>
   <script>
-  // window.onscroll = function() {
-  //   if (window.pageYOffset > 0) {
-  // 	var opac = window.pageYOffset / 1000;
-  //   console.log(window.pageYOffset);
-  // 	document.body.style.backgroundImage = "linear-gradient(rgba(255, 255, 255, " +
-  //   opac + "),rgba(255, 255, 255, " + opac
-  //   + ")),url(img/bg4night4.png),url(img/bg1dawn4.png)";
-  // 	}
-  // }
   </script>
 </html>
