Change some styling and layout

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script language="javascript" type="text/javascript" src="js/scrollBGDemo.js"></script>
   </head>
   <body>
-    <a id="mlh-trust-badge" style="position:fixed;top:0;left:4em;max-width:7em;width:40%;min-width: 3em;display:block;z-index:10000" href="https://mlh.io/seasons/na-2017/events" target="_blank"><img src="img/banner.png" alt="MLH Official - Spring 2016" style="width:100%;" ></a>
+    <a id="mlh-trust-badge" style="position:fixed;top:0;left:4em;max-width:7em;width:40%;min-width: 3em;display:block;z-index:10000" href="https://mlh.io/seasons/na-2017/events" target="_blank"><img id="mlh-trust-badge" src="img/banner.png" alt="MLH Official - Spring 2016" style="width:100%;" ></a>
     <div class="header">
       <div id="nav-icon2">
         <span></span>
@@ -40,7 +40,7 @@
     <div class="menu">
       <ul>
         <a href="#faq"><li>FAQ</li></a>
-        <a href="pages/register.html"><li>REGISTER</li></a>
+        <a href="register.html"><li>REGISTER</li></a>
         <a href="#"><li>COLORWAR</li></a>
         <a href="#sponsors"><li>SPONSORS</li></a>
         <a href="#contact"><li>CONTACT</li></a>
@@ -173,20 +173,13 @@
         <img class="starter-images" src="img/Namecheap2.svg"/>
       </div>
       <div id="contact" class="opaque-wrapper">
-        <h3 class="contact">Feel free to <a href="mailto:hello@bitca.mp">email</a> or tweet us <a href="https://twitter.com/bitcmp">@bitcmp<a><p>
-      </div>
-      <div id="copyright" class="opaque-wrapper">
+        <h3 class="contact" style="padding: 40px 25px">Feel free to <a href="mailto:hello@bitca.mp" class="footer">email</a> or tweet us <a href="https://twitter.com/bitcmp" class="footer">@bitcmp<a><p>
         <p class="copyright">© 2017 Bitcamp<p>
-      </div>
-      <div id="social-media" class="opaque-wrapper">
         <a href="https://www.facebook.com/bitcmp"><img class="social-media-images" src="img/fb_icon.svg" /></a>
         <a href="https://twitter.com/bitcmp"><img class="social-media-images" src="img/twitter_icon.svg" /></a>
         <a href="https://instagram.com/bitcamp"><img class="social-media-images" src="img/instagram_icon.svg" /></a>
         <a href="https://go.snapchat.com/add/bitcamp"><img class="social-media-images" src="img/snapchat_icon.svg" /></a>
       </div>
     </div>
-
   </body>
-  <script>
-  </script>
 </html>
