--- a/conduct.html
+++ b/conduct.html
@@ -31,7 +31,7 @@
     <script language="javascript" type="text/javascript" src="js/scrollBGDemo.js"></script>
   </head>
   <body>
-    <a id="mlh-trust-badge" style="position:fixed;top:0;left:4em;max-width:7em;width:40%;min-width: 3em;display:block;z-index:10000" href="https://mlh.io/seasons/na-2017/events" target="_blank"><img src="img/banner.png" alt="MLH Official - Spring 2016" style="width:100%;" ></a>
+    <a id="mlh-trust-badge" style="position:fixed;top:0;left:4em;max-width:7em;width:40%;min-width: 3em;display:block;z-index:10000" href="https://mlh.io/seasons/na-2017/events" target="_blank"><img id="mlh-trust-badge" src="img/banner.png" alt="MLH Official - Spring 2016" style="width:100%;" ></a>
     <div id="canvas-holder"></div>
     <div id="content-wrapper">
     <img id="logo" src="img/bitcamp-logo-badge.png"/>
@@ -64,7 +64,7 @@ Credit for this Code of Conduct goes to The Ada Initiative, with the original so
       </p>
     </div>
     <div id="contact" class="opaque-wrapper">
-      <h3 class="contact">Feel free to <a href="mailto:hello@bitca.mp">email</a> or tweet us <a href="https://twitter.com/bitcmp">@bitcmp<a><p>
+      <h3 class="contact" style="padding: 40px 25px">>Feel free to <a href="mailto:hello@bitca.mp" class="footer">email</a> or tweet us <a href="https://twitter.com/bitcmp" class="footer">@bitcmp<a><p>
       <p class="copyright">© 2017 Bitcamp<p>
       <a href="https://www.facebook.com/bitcmp"><img class="social-media-images" src="img/fb_icon.svg" /></a>
       <a href="https://twitter.com/bitcmp"><img class="social-media-images" src="img/twitter_icon.svg" /></a>
@@ -72,6 +72,4 @@ Credit for this Code of Conduct goes to The Ada Initiative, with the original so
       <a href="https://go.snapchat.com/add/bitcamp"><img class="social-media-images" src="img/snapchat_icon.svg" /></a>
     </div>
   </body>
-  <script>
-  </script>
 </html>
