--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
         <a href="https://twitter.com/bitcmp"><img class="social-media-images" src="img/twitter_icon.svg" /></a>
         <a href="https://instagram.com/bitcamp"><img class="social-media-images" src="img/instagram_icon.svg" /></a>
         <a href="https://go.snapchat.com/add/bitcamp"><img class="social-media-images" src="img/snapchat_icon.svg" /></a>
+        <p style="font-size: 0.75em">Made with love by <a href="http://terrapinfreelancers.com/" class="footer">Terrapin Freelancers</a>
       </div>
     </div>
   </body>
