streamline scroll background change

--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
     <script type="text/javascript" src="js/index.js"></script>
     <link rel="shortcut icon" href="/bitcamp-favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <script language="javascript" type="text/javascript" src="js/p5.js"></script>
-    <script language="javascript" type="text/javascript" src="js/p5.dom.js"></script>
-    <script language="javascript" type="text/javascript" src="js/scrollBGDemo.js"></script>
   </head>
   <body>
+    <img src ="img/bg2day4.png" class="bg" id="6"></img>
+    <img src ="img/bg1dawn4.png" class="bg" id="5"></img>
+    <img src ="img/bg4night4.png" class="bg" id="4"></img>
+    <img src ="img/bg4night4.png" class="bg" id="3"></img>
+    <img src ="img/bg3dusk4.png" class="bg" id="2"></img>
+    <img src ="img/bg2day4.png" class="bg" id="1"></img>
     <a id="mlh-trust-badge" style="position:fixed;top:0;left:4em;max-width:7em;width:40%;min-width: 3em;display:block;z-index:10000" href="https://mlh.io/seasons/na-2017/events" target="_blank"><img id="mlh-trust-badge" src="img/banner.png" alt="MLH Official - Spring 2016" style="width:100%;" ></a>
     <div class="header">
       <div id="nav-icon2">
@@ -46,7 +49,6 @@
         <a href="#contact"><li>CONTACT</li></a>
       </ul>
     </div>
-    <div id="canvas-holder"></div>
     <div id="content-wrapper">
       <img id="logo" src="img/bitcamp-logo-badge.png"/>
       <!-- <h1>bitcamp</h1> -->
@@ -91,7 +93,7 @@
           <h3 class="heading"> Where's Bitcamp? </h3>
           <p class="body-text">
             Bitcamp 2017 will take place at the Xfinity center on the
-            University of Maryland Campus! 
+            University of Maryland Campus!
             <a href="http://www.umterps.com/ViewArticle.dbml?ATCLID=208131345">Click here for directions</a>
           </p>
           <h3 class="heading"> Travel </h3>
