add new bottom image

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           </p>
         </div>
       </div>
-      <img class="content-images" src="img/IMG_6541.raw"/>
+      <img class="content-images" src="img/IMG_6531.png"/>
       <div id="sponsors" class="opaque-wrapper">
         <h2 class="heading"> Sponsors </h2>
         <img class="recruiter-images" src="img/CapitalOne.svg"/>
