Change love to a heart and add the animation to the conduct page as well

--- a/conduct.html
+++ b/conduct.html
@@ -20,19 +20,21 @@
       crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <link rel="shortcut icon" href="/bitcamp-favicon.ico">
+    <link href="http://designers.hubspot.com/hs-fs/hub/327485/file-2054199286-css/font-awesome.css" rel="stylesheet">
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/index.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <script language="javascript" type="text/javascript" src="js/p5.js"></script>
-    <script language="javascript" type="text/javascript" src="js/p5.dom.js"></script>
-    <script language="javascript" type="text/javascript" src="js/scrollBGDemo.js"></script>
   </head>
   <body>
     <a id="mlh-trust-badge" style="position:fixed;top:0;left:4em;max-width:7em;width:40%;min-width: 3em;display:block;z-index:10000" href="https://mlh.io/seasons/na-2017/events" target="_blank"><img id="mlh-trust-badge" src="img/banner.png" alt="MLH Official - Spring 2016" style="width:100%;" ></a>
-    <div id="canvas-holder"></div>
+    <img src ="img/bg2day4.png" class="bg" id="6"></img>
+    <img src ="img/bg1dawn4.png" class="bg" id="5"></img>
+    <img src ="img/bg4night4.png" class="bg" id="4"></img>
+    <img src ="img/bg4night4.png" class="bg" id="3"></img>
+    <img src ="img/bg3dusk4.png" class="bg" id="2"></img>
+    <img src ="img/bg2day4.png" class="bg" id="1"></img>
     <div id="content-wrapper">
     <img id="logo" src="img/bitcamp-logo-badge.png"/>
     <div id="faq" class="opaque-wrapper" style="margin-top: 10em">
@@ -64,13 +66,13 @@ Credit for this Code of Conduct goes to The Ada Initiative, with the original so
       </p>
     </div>
     <div id="contact" class="opaque-wrapper">
-      <h3 class="contact" style="padding: 40px 25px">>Feel free to <a href="mailto:hello@bitca.mp" class="footer">email</a> or tweet us <a href="https://twitter.com/bitcmp" class="footer">@bitcmp<a><p>
+      <h3 class="contact" style="padding: 40px 25px">Feel free to <a href="mailto:hello@bitca.mp" class="footer">email</a> or tweet us <a href="https://twitter.com/bitcmp" class="footer">@bitcmp<a><p>
       <p class="copyright">© 2017 Bitcamp<p>
       <a href="https://www.facebook.com/bitcmp"><img class="social-media-images" src="img/fb_icon.svg" /></a>
       <a href="https://twitter.com/bitcmp"><img class="social-media-images" src="img/twitter_icon.svg" /></a>
       <a href="https://instagram.com/bitcamp"><img class="social-media-images" src="img/instagram_icon.svg" /></a>
       <a href="https://go.snapchat.com/add/bitcamp"><img class="social-media-images" src="img/snapchat_icon.svg" /></a>
-      <p style="font-size: 0.75em">Made with love by <a href="http://terrapinfreelancers.com/" class="footer">Terrapin Freelancers</a>
+      <p style="font-size: 0.75em">Made with <i class="fa fa-heart" aria-hidden="true" style="color: #fa9f3a"></i> by <a href="http://terrapinfreelancers.com/" class="footer">Terrapin Freelancers</a>
     </div>
   </body>
 </html>
