--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <link href="http://designers.hubspot.com/hs-fs/hub/327485/file-2054199286-css/font-awesome.css" rel="stylesheet">
     <link rel="shortcut icon" href="/bitcamp-favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
   </head>
@@ -181,7 +182,7 @@
         <a href="https://twitter.com/bitcmp"><img class="social-media-images" src="img/twitter_icon.svg" /></a>
         <a href="https://instagram.com/bitcamp"><img class="social-media-images" src="img/instagram_icon.svg" /></a>
         <a href="https://go.snapchat.com/add/bitcamp"><img class="social-media-images" src="img/snapchat_icon.svg" /></a>
-        <p style="font-size: 0.75em">Made with love by <a href="http://terrapinfreelancers.com/" class="footer">Terrapin Freelancers</a>
+        <p style="font-size: 0.75em">Made with <i class="fa fa-heart" aria-hidden="true" style="color: #fa9f3a"></i> by <a href="http://terrapinfreelancers.com/" class="footer">Terrapin Freelancers</a>
       </div>
     </div>
   </body>
