Error with image name

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           </p>
         </div>
       </div>
-      <img class="content-images" src="img/IMG_6531.png"/>
+      <img class="content-images" src="img/img_6531.png"/>
       <div id="sponsors" class="opaque-wrapper">
         <h2 class="heading"> Sponsors </h2>
         <img class="recruiter-images" src="img/CapitalOne.svg"/>
